tolk-tester/tests/invalid-syntax/err-3822.tolk

/**
@path_mapping @a/b=/some/path
@compilation_should_fail
@stderr invalid path mapping: alias must not contain path separators, got @a/b
 */
